# gpt2_rep

./: .gitignore  LICENSE  README.md  gpt_download.py  load_gpt.py  main.py  pyproject.toml  requirements.txt  run_gpt.py  run_pre_trained_gpt.py  run_sft_gpt.py
assets/: instruction-data.json  ruozhiba-post-annual.json  ruozhiba-post-annual.txt
scripts/: test.sh  train.sh
tests/: test_dataset.py  test_gpt.py  test_train.py  test_transformer.py
transformer/: attention.py  config.py  dataset.py  embedding.py  feedforward.py  fine_tune.py  gpt.py  io.py  tokenizer.py  train.py  utils.py
