[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt2-rep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=2.2.6",
  "requests>=2.32.5",
  "tensorflow>=2.18.0",
  "tiktoken>=0.13.0",
  "torch>=2.2.2",
  "tqdm>=4.66.1",
]

[tool.setuptools]
packages = ["transformer"]
